# haskellbook

./: Cipher.hs  FunctionWithWhere.hs  aeson-test.hs  arith4.hs  ch10.hs  ch10_fold.hs  ch10_scans.hs  ch10_warmup.hs  ch11.hs  ch11_10.hs  ch11_12.hs  ch11_13.hs  ch11_binary_tree.hs  ch11_jammin.hs  ch11_phonebook.hs  ch11_producttypes.hs  ch11_razor.hs  ch11_sumtypes.hs  ch11_toomany.hs  ch11ex.hs  ch12.hs  ch13ex.hs  ch14ex.hs  ch6_ex.hs  ch7.5_ex.hs  ch76ex.hs  ch77ex.hs  ch7_ex.hs  ch7ex.hs  ch8ex.hs  ch9.hs  ch9ex.hs  coredump  fibonacci.hs  ghcid  haddocset  hindent.hs  http.hs  intero  main  (+11 more)
call-em-up/: call-em-up.cabal
call-em-up/src/: Main.hs
ch14ex/: ch14ex.cabal
ch14ex/test/: Spec.hs
ch15/: Ch15.cabal  notes.txt
ch15/src/: Lib.hs  Listy.hs  MadLibs.hs  MonoidEx.hs  SemigroupEx.hs
ch16/: ch16.cabal
ch16/src/: ChapterEx.hs  Lib.hs  ReplaceExperiment.hs
ch17/: ch17.cabal
ch17/app/: Main.hs
ch17/src/: ApplicativeLaws.hs  ChapterExercises.hs  EitherApplicative.hs  Lib.hs  ZipList.hs
ch18/: LICENSE  ch18.cabal
ch18/src/: ChapterExercises.hs  EitherMonad.hs  Laws.hs  Lib.hs  MaybeMonad.hs
ch20/: ch20.cabal
ch20/app/: Main.hs
ch20/src/: ChapterExercises.hs  Lib.hs
ch21/: ch21.cabal
ch21/app/: Main.hs
ch21/src/: HttpStuff.hs  Lib.hs  TraverseTree.hs
ch22/: ch22.cabal
ch22/src/: ChapterExercises.hs  ChapterExercises2.hs  Main.hs  ReaderMonad.hs
ch23/: ch23.cabal
ch23/src/: ChapterExercises.hs  FizzDList.hs  Main.hs
ch24/: ch24.cabal  test.ini
ch24/src/: AltParsing.hs  ChapterEx.hs  ChapterEx2.hs  ChapterEx4.hs  ChapterEx5.hs  ChapterEx6.hs  ChapterEx7.hs  Fractions.hs  Ini.hs  JSON.hs  Main.hs
ch25/: ch25.cabal
ch25/src/: Main.hs  MonadTrans.hs  OuterInnter.hs  Scotty.hs
ch26/: ch26.cabal
ch26/src/: ChapterExercises.hs  HitCounter.hs  Main.hs  MonadTrans.hs  Morra.hs  OuterInner.hs
ch27/: ch27.cabal
ch27/src/: BangPattern.hs  ChapterEx.hs  CoreDump.hs  Main.hs  StrictTest1.hs
ch28/: ch28.cabal
ch28/src/: BoxUnboxVector.hs  CAF.hs  Main.hs  MutableVector.hs  ProfilingMemory.hs  ProfilingTime.hs  String.hs
hangman/: hangman.cabal  stack.yaml
hangman/data/: dict.txt
hangman/src/: Hangman.hs  Main.hs
hangman/test/: Spec.hs
haskell-test-stack/: haskell-test-stack.cabal
hello-haskell/: LICENSE  hello-haskell.cabal
hello-haskell/src/: Hello.hs  HttpStuff.hs  Main.hs  Morse.hs
hspec/: Addition.hs  addition.cabal
morse-code/: morse-code.cabal
morse-code/src/: Main.hs  Morse.hs
morse-code/test/: Spec.hs  tests.hs
url-shortener/: url-shortener.cabal
url-shortener/app/: Main.hs
