name:                Ch15
version:             0.1.0.0
synopsis:            Initial project template from stack
description:         Please see README.md
homepage:            https://github.com/DavsX/Ch15#readme
license:             BSD3
license-file:        LICENSE
author:              Kov치cs D치vid
maintainer:          kovdavid@gmail.com
copyright:           2016 Kov치cs D치vid
category:            Web
build-type:          Simple
-- extra-source-files:
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Lib
  build-depends:       base >= 4.7 && < 5
                     , QuickCheck
                     , QuickCheck
                     , semigroups
  default-language:    Haskell2010

executable Ch15-exe
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , Ch15
  default-language:    Haskell2010

test-suite Ch15-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , Ch15
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/DavsX/Ch15
