name:                ch17
version:             0.1.0.0
synopsis:            Initial project template from stack
description:         Please see README.md
homepage:            https://github.com/DavsX/ch17#readme
license:             BSD3
license-file:        LICENSE
author:              Kov치cs D치vid
maintainer:          kovdavid@gmail.com
copyright:           2016 Kov치cs D치vid
category:            Web
build-type:          Simple
-- extra-source-files:
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     ZipList
                     , ApplicativeLaws
                     , Lib
  build-depends:       base >= 4.7 && < 5
                     , random
                     , containers
                     , QuickCheck
                     , checkers
  default-language:    Haskell2010
  extensions:          ScopedTypeVariables
                     , InstanceSigs

test-suite ch17-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , ch17
                     , random
                     , containers
                     , QuickCheck
                     , checkers
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010
