name:                url-shortener
version:             0.1.0.0
synopsis:            Simple project template from stack
description:         Please see README.md
homepage:            https://github.com/DavsX/url-shortener#readme
license:             BSD3
license-file:        LICENSE
author:              Kov치cs D치vid
maintainer:          kovdavid@gmail.com
copyright:           2016 Kov치cs D치vid
category:            Web
build-type:          Simple
cabal-version:       >=1.10

executable url-shortener
  hs-source-dirs:      app
  main-is:             Main.hs
  default-language:    Haskell2010
  ghc-options:         -threaded -rtsopts -with-rtsopts=N
  build-depends:       base >= 4.7 && < 5
                     , bytestring
                     , hedis
                     , mtl
                     , network-uri
                     , random
                     , scotty
                     , semigroups
                     , text
                     , transformers
